--- a/app/src/main/res/layout/activity_image_viewer.xml
+++ b/app/src/main/res/layout/activity_image_viewer.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view_model.person.ImageViewerActivity"
+    tools:context=".view_model.common.ImageViewerActivity"
     android:background="#000">
 
     <com.jsibbold.zoomage.ZoomageView
